--- a/wangcai_iOS/wangcai copy-Info.plist
+++ b/wangcai_iOS/wangcai copy-Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2</string>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -44,13 +44,13 @@
 				<string>tencent100577453</string>
 				<string>wb2574513086</string>
 				<string>wb338240125</string>
-				<string>wxf3b81b618060b1fc</string>
+				<string>wxc873ba331620d084</string>
 				<string>QQ41C41549</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.2</string>
+	<string>1.0</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
